tests/warn/array-constraints.jo
// Test array creation constraints

import jo.Array.*

def testObjectArrayWithInt(): Unit =
  // Should fail: ObjectArray cannot be used with Int
  val arr = ObjectArray[Int](10)  // error

def testObjectArrayWithFloat(): Unit =
  // Should fail: ObjectArray cannot be used with Float
  val arr = ObjectArray[Float](10)  // error

def testObjectArrayWithChar(): Unit =
  // Should fail: ObjectArray cannot be used with Char
  val arr = ObjectArray[Char](10)  // error

def testObjectArrayWithByte(): Unit =
  // Should fail: ObjectArray cannot be used with Byte
  val arr = ObjectArray[Byte](10)  // error

def testObjectArrayWithBool(): Unit =
  // Should fail: ObjectArray cannot be used with Bool
  val arr = ObjectArray[Bool](10)  // error

def testObjectArrayWithTypeParam[T](): Unit =
  // Should fail: ObjectArray requires T to be a known type, not a type parameter
  val arr = ObjectArray[T](10)  // error

class Foo

def testObjectArrayWithObject(): Unit =
  // Should succeed: ObjectArray can be used with object types
  val arr = ObjectArray[Foo](10)
